# commit_scraper

./: .ocamlformat  README.md  commit_scraper.opam  dune-project
.github/workflows/: blank.yml  ci.yml
lib/: api_client.ml  api_client.mli  api_client_intf.ml  data_extractor.ml  data_extractor.mli  data_writer.ml  data_writer.mli  data_writer_intf.ml  domain_types.ml  dune  github_commit.atd  processor.ml  types.ml  types.mli  utils.ml  utils.mli
test/: api_mocks.ml  dune  test_api_client.ml  test_data_extractor.ml  test_data_writer.ml  test_json_deserializer.ml  test_processor.ml  writer_mocks.ml
