(library
 (name api_mocks)
 (modules api_mocks)
 (libraries commit_scraper lwt)
 (flags (:standard -w -26-27)))

(library
  (name writer_mocks)
  (modules writer_mocks)
  (libraries commit_scraper lwt)
  (flags (:standard -w -26-27)))

(test
 (name test_commit_scraper)
 (modules test_commit_scraper)
 (libraries alcotest))

(test
  (name test_processor)
  (modules test_processor)
  (flags (:standard -w -26-27))
  (libraries alcotest
             lwt.unix
             commit_scraper
             api_mocks
             writer_mocks))

(test
  (name test_data_writer)
  (modules test_data_writer)
  (flags (:standard -w -26-27))
  (libraries alcotest
             lwt.unix
             commit_scraper
             api_mocks
             writer_mocks))

(test
  (name test_json_deserializer)
  (modules test_json_deserializer)
  (flags (:standard -w -26-27))
  (libraries alcotest
             commit_scraper))
